[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyLnLib"
version = "0.1.8"
description = "Libreria personale di utility Python"
authors = [
    { name = "Loreto Notarantonio" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0.2",
]

[project.license]
text = "MIT"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportUnusedVariable = "warning"
reportUnusedImport = "warning"
reportOptionalMemberAccess = "warning"
reportMissingTypeStubs = false

[tool.setuptools.packages.find]
where = [
    "src",
]
